src/test/ui/kindck/kindck-send-object2.stderr
error[E0277]: `(dyn Dummy + 'static)` cannot be shared between threads safely
  --> $DIR/kindck-send-object2.rs:7:5
   |
LL | fn assert_send<T:Send>() { }
   |    -----------   ---- required by this bound in `assert_send`
...
LL |     assert_send::<&'static dyn Dummy>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `(dyn Dummy + 'static)` cannot be shared between threads safely
   |
   = help: the trait `std::marker::Sync` is not implemented for `(dyn Dummy + 'static)`
   = note: required because of the requirements on the impl of `std::marker::Send` for `&'static (dyn Dummy + 'static)`

error[E0277]: `dyn Dummy` cannot be sent between threads safely
  --> $DIR/kindck-send-object2.rs:12:5
   |
LL | fn assert_send<T:Send>() { }
   |    -----------   ---- required by this bound in `assert_send`
...
LL |     assert_send::<Box<dyn Dummy>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `dyn Dummy` cannot be sent between threads safely
   |
   = help: the trait `std::marker::Send` is not implemented for `dyn Dummy`
   = note: required because of the requirements on the impl of `std::marker::Send` for `std::ptr::Unique<dyn Dummy>`
   = note: required because it appears within the type `std::boxed::Box<dyn Dummy>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
